Repository restructuring and adding datasets and data dictionary

--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "bikes = pd.read_csv('./day.csv')\n",
+    "bikes = pd.read_csv('./data/day.csv')\n",
     "bikes.head()"
    ]
   },
